--- a/extensions/xml/package.json
+++ b/extensions/xml/package.json
@@ -1,5 +1,8 @@
 {
     "name": "freerange-xml",
-    "version": "0.0.1",
-    "main": "index.js"
+    "version": "0.0.2",
+    "main": "index.js",
+    "dependencies": {
+        "xml2js": "^0.4.23"
+    }
 }
