--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "freerange",
-  "version": "0.0.1",
-  "type": "module",
-  "description": "File import and export utilities with free range-request support for remote files",
-  "main": "src/index.js",
-  "license": "AGPL-3.0-or-later",
-  "dependencies": {
-    "h5wasm": "^0.4.4",
-    "nifti-reader-js": "^0.5.4",
-    "pako": "^2.0.4",
-    "webnwb": "0.0.12",
-    "yaml": "^2.1.0"
+  "name": "freerange-monorepo",
+  "private": true,
+  "workspaces": [
+    "freerange-core",
+    "freerange-server"
+  ],
+  "scripts": {
+    "start": "node freerange-server/test/main.js && tinybuild",
+    "publish-core": "cd freerange-core && yarn publish"
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.1",
+    "tinybuild": "^0.3.138"
   }
 }
