--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "freerange-monorepo",
   "private": true,
+  "type": "module",
   "workspaces": [
     "freerange-core",
     "freerange-server"
   ],
   "scripts": {
-    "start": "node freerange-server/test/main.js && tinybuild",
-    "publish-core": "cd freerange-core && yarn publish"
+    "start": "concurrently \"node example/backend/main.js\" \"tinybuild\"",
+    "publish-core": "cd freerange-core && yarn publish",
+    "which": "which tinybuild"
   },
   "devDependencies": {
     "concurrently": "^7.2.1",
-    "tinybuild": "^0.3.138"
+    "cors": "^2.8.5",
+    "tinybuild": "0.3.129",
+    "typescript": "^4.7.3"
   }
 }
