--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "freerange-server"
   ],
   "scripts": {
-    "start": "concurrently \"node example/backend/main.js\" \"tinybuild\"",
+    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "frontend": "tinybuild",
+    "backend": "node --max-http-header-size=16000 example/backend/main.js",
     "publish-core": "cd freerange-core && yarn publish",
     "which": "which tinybuild"
   },
