--- a/freerange-core/package.json
+++ b/freerange-core/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
+    "idb-keyval": "^6.1.0",
     "pako": "^2.0.4"
   }
 }
