--- a/freerange-core/package.json
+++ b/freerange-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freerange",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "type": "module",
   "description": "File import and export utilities with free range-request support for remote files",
   "main": "dist/index.js",
@@ -13,28 +13,13 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "start": "tinybuild",
-    "build": "rollup -c && tsc"
+    "build": "tinybuild build"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@web/rollup-plugin-copy": "^0.3.0",
-    "rollup": "^2.67.2",
-    "rollup-plugin-import-css": "^3.0.2",
-    "rollup-plugin-minify-html-literals": "^1.2.6",
-    "rollup-plugin-polyfill": "^4.0.0",
-    "rollup-plugin-summary": "^1.3.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2"
+    "tinybuild": "^0.3.141"
   },
   "dependencies": {
     "idb-keyval": "^6.1.0",
-    "pako": "^2.0.4",
-    "tinybuild": "^0.3.141"
+    "pako": "^2.0.4"
   }
 }
