--- a/freerange-core/tsconfig.json
+++ b/freerange-core/tsconfig.json
@@ -2,10 +2,9 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         /* -- Basic Options -- */
-        "rootDir": "../", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "rootDir": "./", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         "outDir": "./dist",
         "module": "es2020",
         "esModuleInterop": true
     },
-    "include": ["./"],
 }
