--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
       "target": "es2020", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
       "rootDir": "./", /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
       "outDir": "dist/", /* Redirect output structure to the directory. */
-      "module": "es2020", /* KEEP THIS SO THAT WEBPACK BUILDS PROPERLY (cannot find "tslib") */
+      "module": "esnext", 
       "declaration": true, /* Generates corresponding '.d.ts' file. */
-      "lib": ["es2015", "dom"],
+      "lib": ["es2019", "dom"],
       "importHelpers": true, /* Import emit helpers from 'tslib'. */
     //   "noEmitHelpers": true,
       "pretty": true, /* Stylize errors and messages using color and context (experimental). */
@@ -48,5 +48,5 @@
       "**/tests/**",
       "**/dist/**",
   ],
-  "include": [],
+  "include": ["./src"],
 }
