--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "freerange-core",
-    "freerange-server"
+    "src/**"
   ],
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "start": "concurrently \"npm run frontend\"",
+    "start-both": "concurrently \"npm run backend\" \"npm run frontend\"",
     "frontend": "tinybuild",
     "backend": "node --max-http-header-size=16000 example/backend/main.js",
     "which": "which tinybuild"
@@ -17,5 +17,9 @@
     "cors": "^2.8.5",
     "tinybuild": "0.3.129",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "idb-keyval": "^6.1.0",
+    "pako": "^2.0.4"
   }
 }
