--- a/src/core/package.json
+++ b/src/core/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "type": "module",
   "dependencies": {
+    "cross-blob": "^3.0.1",
     "idb-keyval": "^6.1.0",
+    "node-fetch": "^3.2.0",
     "pako": "^2.0.4"
   }
 }
