--- a/example/backend/package.json
+++ b/example/backend/package.json
@@ -21,7 +21,11 @@
     "license": "AGPL-3.0-or-later",
     "dependencies": {
         "cookie-parser": "^1.4.6",
-        "cross-blob": "^3.0.1"
+        "cors": "^2.8.5",
+        "cross-blob": "^3.0.1",
+        "express": "^4.18.1",
+        "node-fetch": "^3.2.6",
+        "pako": "^2.0.4"
     },
     "nodemonConfig": {
         "env": {
