--- a/src/core/package.json
+++ b/src/core/package.json
@@ -6,6 +6,7 @@
     "cross-blob": "^3.0.1",
     "idb-keyval": "^6.1.0",
     "node-fetch": "^3.2.0",
-    "pako": "^2.0.4"
+    "pako": "^2.0.4",
+    "remote-esm": "^0.0.17"
   }
 }
