--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "cross-blob": "^3.0.1",
-    "idb-keyval": "^6.1.0"
+    "idb-keyval": "^6.2.0",
+    "pako": "^2.0.4"
   }
 }
